# Insight_Ingenious

./: .gitignore  404.html  API_MIGRATION_COMPLETION.md  CONTRIBUTING.md  DDD_API_USAGE_GUIDE.md  DDD_MIGRATION_COMPLETION_REPORT.md  DDD_MIGRATION_GUIDE.md  DDD_REFACTORING_SUMMARY.md  FEATURES_INVENTORY.md  README.md  index.html  mock-azure-services.sh  pyproject.toml  pytest.ini  receiver_cli.py  sitemap.xml  test_config.json  transform-azure-spec.py
.github/: copilot-instructions-new.md  copilot-instructions.md
about/: index.html
about/release_notes/: index.html
conversation_pattern_example/: config.yml
developer_guide/folder_structure/: index.html
developer_guide/overview/: index.html
developer_guide/service_prefabs/: index.html
developer_guide/step_1_applications_setup/: index.html
developer_guide/step_2_repo_setup/: index.html
developer_guide/step_3_deployment/: index.html
docs/: QUICKSTART.md  README.md  SUMMARY.md  api-reference.md  azure-integration.md  best-practices.md  cli-usage.md  configuration.md  getting-started.md  installation.md  prompt-ensembles.md  prompt_ensemble_guide.md  troubleshooting.md
docs/development/: README.md
docs/examples/: README.md  business-analysis.py  code_review_ensemble.json  document_analysis_ensemble.json  simple-topic-analysis.py
docs/getting-started/: README.md  troubleshooting.md
docs/quick_onboarding/: GettingStarted.md
docs/troubleshooting/: README.md
docs/usage/: README.md
documentation_guide/overview/: index.html
getting_started/: index.html
getting_started/chainlit/: index.html
getting_started/config_file/: index.html
getting_started/installation/: index.html
getting_started/profile_file/: index.html
getting_started/your_first_conversation/: index.html
ingenious/: __init__.py  cli.py  dependencies.py  main.py  run_tests.py
ingenious-dev-workspace/: README.md  azure_validation_results.json  benchmark-performance.py  demo-ensemble.py  main.py  pyproject.toml  test-runner.sh  validate-azure.py
ingenious.egg-info/: PKG-INFO  SOURCES.txt
ingenious/chat/: __init__.py
ingenious/cli/: __init__.py  ensemble_commands.py  main.py
ingenious/config/: config.py  profile.py
ingenious/configuration/: __init__.py
ingenious/core/: dependency_injection.py
ingenious/diagnostics/: __init__.py
ingenious/document_parser/: requirements.txt
ingenious/file_management/: __init__.py
ingenious/files/: files_repository.py
ingenious/legacy/: __init__.py
ingenious_prompt_tuner/: __init__.py  utilities.py
search/: search_index.json
specs/: azure-blob-transformed.json  azure-openai-transformed.json  azure-search-transformed.json  azure-sql-transformed.json
tests/: conftest.py
tmp/: context.md  high_level_logs.db
(+182 files in other folders)
