[project]
name = "insight-ingenious"
version = "0.1.0"
description = "GenAI Accelerator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.23.0",
    "azure-keyvault-secrets>=4.10.0",
    "fastapi==0.115.9",
    "jinja2==3.1.6",
    "openai==1.82.0",
    "psutil>=7.0.0",
    "pydantic==2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "typer>=0.15.4",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
    "setuptools>=80.9.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "freezegun>=1.4.0",
]

[project.optional-dependencies]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingenious*"]

[project.scripts]
ingen = "ingenious.cli:app"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402"]
